--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
   login.addEventListener('click', (e) => {
     signInWithRedirect(auth, provider);
 
-    getRedirectResult(auth)
+    signInWithPopup(auth, provider)
   .then((result) => {
-    // This gives you a Google Access Token. You can use it to access Google APIs.
+    // This gives you a Google Access Token. You can use it to access the Google API.
     const credential = GoogleAuthProvider.credentialFromResult(result);
     const token = credential.accessToken;
-
     // The signed-in user info.
     const user = result.user;
+    // ...
   }).catch((error) => {
     // Handle Errors here.
     const errorCode = error.code;
