--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>LOGGED OUT SCREEN</h1>
-    <div>
+    <div class="center">
         <button class="social-signin google" id='login'>Login com Google</button>
     </div>
 </body>
@@ -17,7 +17,7 @@
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-analytics.js";
-  import { getAuth, GoogleAuthProvider, signInWithRedirect, getRedirectResult, signInWithPopup } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-auth.js";
+  import { getAuth, GoogleAuthProvider, signInWithRedirect, getRedirectResult, signInWithPopup, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.8.1/firebase-auth.js";
 
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
@@ -50,7 +50,7 @@
     // The signed-in user info.
     const user = result.user;
         
-    alert(user.displayName);
+    alert("Autenticado com sucesso");
     // ...
   }).catch((error) => {
     // Handle Errors here.
@@ -65,5 +65,13 @@
     alert(errorMessage);
   });
   });
+
+  firebase.auth().onAuthStateChanged(function(user) {
+  if (user) {
+    // User is signed in.
+    window.location = 'logged-in.html'
+  }
+});
+
 </script>
 </html>
