mudando título(h1) da página

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <button class="btn" id="login">Login com Google</button>
       </div>
     </nav>
-    <h1 class="center">Tela de não logado</h1>
+    <h1 class="center">WOW Project</h1>
 
     <script type="module">
       //Importando as funções do arquivo firebase.js
